# JNI_checkers

./: CMakeLists.txt  Figures.cpp  GamePanel.h  InputHandler.h  README.md
src/: Constants.java  GameFrame.java  GamePanel.java  GameTest.java  InputHandler.java
